<resources>
    <string name="app_name">Images Catalog</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="welcome_back_you_have_been_missed">Welcome back! you have been missed</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="fill_in_below_fields_to_register">Fill in below fields to register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="invalid_password">Enter a valid password</string>
    <string name="invalid_age">Enter a valid age</string>
    <string name="age">Age</string>
    <string name="image_details">Image Details</string>
    <string name="image_size">Image Size: %s</string>
    <string name="image_type">Image Type: %s</string>
    <string name="image_tags">Image Tags: %s</string>
    <string name="additional_information">Additional Information</string>
    <string name="uploaded_by">Uploaded By: %s</string>
    <string name="total_views">Total Views: %s</string>
    <string name="total_likes">Total Likes: %s</string>
    <string name="total_comments">Total Comments: %s</string>
    <string name="total_downloads">Total Downloads: %s</string>
</resources>