<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zaidkhaled.imagescatalog.ui.authentication.viewModel.AuthenticationViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_12sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/AppTheme.HugeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/register_now"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sub_title"
                style="@style/AppTheme.SmallTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/fill_in_below_fields_to_register"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.registerUsername}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/age"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/tlUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAge"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxEms="2"
                    android:maxLength="2"
                    android:text="@={viewModel.registerAge}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/tlAge"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/InputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.registerPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/AppTheme.GrayButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:maxEms="12"
                android:maxLength="12"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/tlPassword" />

            <TextView
                android:id="@+id/tv_already_have_account"
                style="@style/AppTheme.TinyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/gray_color"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/tv_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/gl_v_start"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/AppTheme.TinyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/login"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.ProgressBar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>